# repo

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  meson.build
data/: assets.gresource.xml  com.github.chances.repo.appdata.xml.in  com.github.chances.repo.desktop.in  meson.build  stylesheet.css
schemas/: com.github.chances.repo.gschema.xml
src/: Application.vala  Main.vala  MainWindow.vala  config.vala.in  meson.build
src/Services/: Repositories.vala  Settings.vala
src/Widgets/: HeaderBar.vala  RepositoryList.vala
